blocks/title/title.css
.title-wrapper.sticky {
  position: sticky;
  top: calc(var(--header-height) - 1px);
  padding-top: var(--spacing-s);
  padding-bottom: var(--spacing-l);
  background-color: var(--layer-base);
  z-index: 1;
}

.title-wrapper::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: var(--border-m);
  background-color: var(--blue);
  transition: opacity 0.3s, width 0.3s;
  opacity: 0;
}

.title-wrapper[data-sticky='true']::after {
  width: 100%;
  opacity: 1;
}

.title {
  font-family: var(--heading-font-family);
}

.title h2,
.title .h2 {
  margin: 0;
  scroll-margin: 1em;
  font-size: var(--heading-size-xxl);
  font-weight: var(--weight-extrabold);
  line-height: var(--line-height-s);
  text-transform: lowercase;
}

.title p {
  font-size: var(--heading-size-xs);
  grid-row: 2;
  grid-column: span 2;
}

.title h2 + p {
  margin: 0;
}

.title > div {
  display: grid;
  grid-template-columns: 1fr minmax(auto, max-content);
  grid-template-rows: auto;
  gap: 0 var(--spacing-s);
  max-width: 100%;
}

.title > div > * {
  align-self: center;
}

.title .title-price {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: flex-end;
  gap: 0 2ch;
  min-width: 0;
  overflow-wrap: break-word;
  text-align: right;
}

.title .title-price p {
  display: block;
  position: relative;
  margin: 0;
  margin-right: 2ch;
}

.title .title-price .title-price-label {
  position: absolute;
  top: 5px;
  left: calc(100% + 1ch);
  transform: rotate(90deg);
  transform-origin: left;
  line-height: 0;
  transition: all 0.3s;
}

.title .title-price .title-price-extra {
  display: none;
}

.title .title-bundled-container {
  display: flex;
  flex-flow: column;
  text-align: right;
}

.title .title-bundled-container h3 {
  font-size: var(--heading-size-m);
}

@media (width >= 600px) {
  .title > div {
    grid-template-rows: auto 1fr;
  }

  .title p {
    grid-column: 1;
  }

  .title .title-price {
    grid-column: 2;
    grid-row: 1 / span 2;
  }
  
  .title .title-price p {
    display: flex;
    flex-direction: column;
    margin-right: 0;
  }
  
  .title .title-price .title-price-label {
    position: unset;
    transform: unset;
    line-height: unset;
  }

  .title .title-price .title-price-extra {
    font-family: var(--body-font-family);
    font-size: var(--body-size-s);
    display: unset;
    max-width: 80px;
  }

  .title .title-bundled-container h3 {
    font-size: var(--heading-size-l);
  }
}

@media (width >= 900px) {
  .title h2,
  .title .h2 {
    font-size: var(--heading-size-xxxl);
  }
}

